# libdnf-lock

./: meson.build
src/: lock.cpp
